refactor: complete explicit agent run scope